updated hover link colors

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -18,14 +18,14 @@ $white: #fff;
 
 //////////////// 2. Dark Colors /////////////////
 $dark-text-base-color: #babdc4;
-$dark-text-link-blue: #77a8fd;
-$dark-text-link-blue-active: #5292ff;
+$dark-text-link-blue: #67B378;
+$dark-text-link-blue-active: #67B378;
 $dark-bloquote-border: #4a4d56;
 $dark-blockquote-text: #9b9ba3;
 $dark-inline-code-text: #c2c4ca;
 $dark-inline-code-bg: #2d2d2d;
 $dark-toc-bg: #323232;
-$dark-go-top-bg: #676767b3;
+$dark-go-top-bg: #67B378;
 $dark-go-top-bg-hover: #676767;
 
 $dark-black: #0b1602;
